# alps_o1_system

bt/: Android.bp
bt/audio_a2dp_hw/: Android.bp
bt/include/: bt_target.h
bt/main/: Android.bp  bte_main.cc  stack_config.cc
bt/mediatek/: Android.bp  BUILD.gn
bt/mediatek/bta/: mtk_bta_ag_cmd.cc
bt/mediatek/bta/av/: mtk_bta_av_act.cc
bt/mediatek/bta/dm/: mtk_bta_dm_act.cc
bt/mediatek/bta/include/: bta_gatts_co.h  mtk_bta_av_act.h  mtk_bta_dm.h
bt/mediatek/btif/: mtk_btif_av.cc
bt/mediatek/btif/co/: bta_gatts_co.cc
bt/mediatek/btif/include/: mtk_btif_dm.h  mtk_btif_rc.h
bt/mediatek/btif/src/: mtk_btif_dm.cc  mtk_btif_rc.cc
bt/mediatek/conf/: Android.mk
bt/mediatek/config/: log_mode.cc  log_time.cc  mtk_stack_config.cc
bt/mediatek/gatt/: gatts_mtk.cc
bt/mediatek/hci/: fw_logger_filter.cc  fw_logger_switch.cc  hci_inbound_data_monitor.cc  twrite.cc
bt/mediatek/include/: fw_logger_filter.h  fw_logger_switch.h  gatts_mtk.h  hci_inbound_data_monitor.h  interop_database_mtk.h  interop_mtk.h  log_mode.h  log_time.h  mdroid_buildcfg.h  mtk_btif_av.h  mtk_stack_config.h  mtk_util.h  twrite.h
bt/mediatek/interop/: interop_mtk.cc
bt/mediatek/stack/: mtk_sdp_service.cc
core/adb/: Android.mk  adb.cpp  adb_trace.h  fdevent.cpp  file_sync_service.cpp  services.cpp  shell_service.cpp  socket.h  sockets.cpp  transport.cpp  transport_usb.cpp
core/debuggerd/: crash_dump.cpp
core/fs_mgr/: Android.bp  fs_mgr.cpp  (+2 more)
vold/: EmulatedVolume.cpp  EmulatedVolume.h  EncryptInplace.cpp  PrivateVolume.cpp  Process.cpp  Utils.cpp  Utils.h  cryptfs.cpp
(+127 files in other folders)
